--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,9 +14,9 @@ server:
 spring:
   datasource:
     driver-class-name: oracle.jdbc.OracleDriver
-    password: developerdjk
-    url: jdbc:oracle:thin:@localhost:1521/xe
-    username: gestoria
+    password: 123456789
+    url: jdbc:oracle:thin:@localhost:11521/xe
+    username: chars
   main:
     banner-mode: 'off'
   mvc:
